# docs/swagger.yaml
@@ -595,12 +595,44 @@ definitions:
       username:
         type: string
     type: object
+  dto.Word:
+    properties:
+      context:
+        type: string
+      id:
+        type: integer
+      originalWord:
+        type: string
+      wordExplainingTranslations:
+        additionalProperties:
+          type: string
+        type: object
+      wordTranslations:
+        additionalProperties:
+          type: string
+        type: object
+    type: object
+  dto.WordCreate:
+    properties:
+      context:
+        type: string
+      originalWord:
+        type: string
+      wordExplainingTranslations:
+        additionalProperties:
+          type: string
+        type: object
+      wordTranslations:
+        additionalProperties:
+          type: string
+        type: object
+    type: object
   dto.WordExplain:
     properties:
       block:
         type: string
       lang:
-        type: string
+        $ref: '#/definitions/models.Language'
       word:
         type: string
     type: object
@@ -1320,6 +1352,202 @@ paths:
       summary: Register user
       tags:
       - Auth
+  /dictionary/create:
+    post:
+      consumes:
+      - application/json
+      description: Create a new dictionary word
+      parameters:
+      - description: Word create payload
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.WordCreate'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            additionalProperties: true
+            type: object
+        "422":
+          description: Unprocessable Entity
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Create dictionary word
+      tags:
+      - Dictionary
+  /dictionary/delete/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete dictionary word by id
+      parameters:
+      - description: Word ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Delete dictionary word
+      tags:
+      - Dictionary
+  /dictionary/getAll:
+    get:
+      consumes:
+      - application/json
+      description: Get all dictionary words
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/dto.Word'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Get all dictionary words
+      tags:
+      - Dictionary
+  /dictionary/getById/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get dictionary word by id
+      parameters:
+      - description: Word ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.Word'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Get dictionary word by id
+      tags:
+      - Dictionary
+  /dictionary/getByWord/{word}:
+    get:
+      consumes:
+      - application/json
+      description: Get dictionary words
+      parameters:
+      - description: Original word
+        in: path
+        name: word
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/dto.Word'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Get all meanings of the word
+      tags:
+      - Dictionary
+  /dictionary/update:
+    patch:
+      consumes:
+      - application/json
+      description: Update existing dictionary word
+      parameters:
+      - description: Word update payload
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.Word'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Update dictionary word
+      tags:
+      - Dictionary
   /folklore/create:
     post:
       consumes:
