# internal/domain/models/dictionary.go
@@ -1,0 +1,9 @@
+package models
+
+type Word struct {
+	ID                         uint
+	OriginalWord               string
+	Context                    string
+	WordTranslations           map[Language]string
+	WordExplainingTranslations map[Language]string
+}
